--- a/crawling.ipynb
+++ b/crawling.ipynb
@@ -2,34 +2,37 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "import requests\n",
     "from bs4 import BeautifulSoup\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from datetime import datetime"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "# 삼성전자 코드\n",
     "code = '005930'\n",
     "headers = {'User-Agent': 'Mozilla/5.0'}\n",
     "\n",
     "# 수집할 날짜 범위\n",
-    "target_dates = pd.to_datetime(['2025.04.21', '2025.04.22', '2025.04.23', '2025.04.24', '2025.04.25'])\n",
+    "start_date = pd.to_datetime('2023-03-01')\n",
+    "end_date = pd.to_datetime('2024-02-28')\n",
     "\n",
     "# 데이터를 저장할 리스트\n",
     "data = []\n",
     "\n",
-    "# 1~3페이지 돌면서 데이터 수집\n",
-    "for page in range(1, 4):\n",
+    "# 여러 페이지 돌면서 데이터 수집\n",
+    "for page in range(1, 70):  # 페이지 수를 넉넉히 설정 (필요시 조정)\n",
     "    url = f\"https://finance.naver.com/item/sise_day.nhn?code={code}&page={page}\"\n",
     "    res = requests.get(url, headers=headers)\n",
     "    soup = BeautifulSoup(res.text, 'html.parser')\n",
@@ -40,41 +43,52 @@
     "    for row in rows:\n",
     "        cols = row.find_all('td')\n",
     "        if len(cols) >= 6:\n",
-    "            date = cols[0].get_text(strip=True)\n",
+    "            date_str = cols[0].get_text(strip=True)\n",
+    "            if not date_str:\n",
+    "                continue  # 빈 줄 건너뛰기\n",
+    "            \n",
+    "            date = pd.to_datetime(date_str, format='%Y.%m.%d')\n",
     "            close_price = cols[1].get_text(strip=True).replace(',', '')\n",
     "            volume = cols[6].get_text(strip=True).replace(',', '')\n",
     "            \n",
-    "            if date in target_dates:\n",
+    "            # 날짜가 범위 안에 있는지 확인\n",
+    "            if start_date <= date <= end_date:\n",
     "                data.append({\n",
-    "                    '날짜': date,\n",
+    "                    '날짜': date.strftime('%Y.%m.%d'),\n",
     "                    '종가': int(close_price),\n",
     "                    '거래량': int(volume)\n",
     "                })\n",
-    "\n"
+    "            elif date < start_date:\n",
+    "                break  # 시작 날짜보다 과거 데이터면 중단"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "           날짜     종가       거래량  변동률(%)\n",
-      "0  2025.04.21  55400   5941847    0.00\n",
-      "1  2025.04.22  55000   9532469   -0.72\n",
-      "2  2025.04.23  55700  11148692    1.27\n",
-      "3  2025.04.24  55700  10580377    0.00\n",
-      "4  2025.04.25  55700  12183303    0.00\n"
+      "             날짜     종가       거래량  변동률(%)\n",
+      "0    2023.05.03  65400   8876749    0.00\n",
+      "1    2023.05.04  65100   9791064   -0.46\n",
+      "2    2023.05.08  65900   9405365    1.23\n",
+      "3    2023.05.09  65300   9366861   -0.91\n",
+      "4    2023.05.10  64600  13057727   -1.07\n",
+      "..          ...    ...       ...     ...\n",
+      "197  2024.02.22  73100  15208934    0.14\n",
+      "198  2024.02.23  72900  16225166   -0.27\n",
+      "199  2024.02.26  72800  14669352   -0.14\n",
+      "200  2024.02.27  72900  13201981    0.14\n",
+      "201  2024.02.28  73200  11795859    0.41\n",
+      "\n",
+      "[202 rows x 4 columns]\n"
      ]
     }
    ],
    "source": [
-    "\n",
-    "\n",
-    "\n",
     "# 데이터프레임으로 변환\n",
     "df = pd.DataFrame(data).drop_duplicates(subset='날짜')\n",
     "df = df.sort_values('날짜').reset_index(drop=True)\n",
@@ -86,7 +100,7 @@
     "df['변동률(%)'] = ((df['종가'] - df['전일종가']) / df['전일종가']) * 100\n",
     "df['변동률(%)'] = df['변동률(%)'].fillna(0)  # 첫 행은 0으로\n",
     "\n",
-    "# 전일종가 컬럼 삭제 (표시 안 하고 싶으면)\n",
+    "# 전일종가 컬럼 삭제\n",
     "df = df.drop(columns=['전일종가'])\n",
     "\n",
     "# 소수점 둘째자리까지만 반올림\n",
@@ -96,13 +110,13 @@
     "print(df)\n",
     "\n",
     "# CSV 저장\n",
-    "df.to_csv('samsung_stock_final.csv', index=False, encoding='utf-8-sig')\n"
+    "df.to_csv('samsung_stock_20230301_20240228.csv', index=False, encoding='utf-8-sig')"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -116,7 +130,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
