[Feature]Add newstext_data crawling,Add 0/1 Column

--- a/newstext_data_crawling.ipynb
+++ b/newstext_data_crawling.ipynb
@@ -2,37 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "925e37b6",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'selenium'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[4]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mselenium\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m webdriver\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mselenium\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mwebdriver\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mcommon\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mby\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m By\n\u001b[32m      3\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mselenium\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mwebdriver\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mchrome\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mservice\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m Service\n",
-      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'selenium'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from selenium import webdriver\n",
-    "from selenium.webdriver.common.by import By\n",
-    "from selenium.webdriver.chrome.service import Service\n",
-    "from selenium.webdriver.chrome.options import Options\n",
-    "from webdriver_manager.chrome import ChromeDriverManager\n",
-    "from datetime import datetime, timedelta\n",
+    "import requests\n",
+    "from bs4 import BeautifulSoup\n",
     "import pandas as pd\n",
-    "import time\n",
-    "\n",
-    "# 크롬 옵션 설정\n",
-    "options = Options()\n",
-    "options.add_argument('--headless')  # 브라우저 창 안 띄움 (테스트용)\n",
-    "options.add_argument('--no-sandbox')\n",
-    "options.add_argument('--disable-dev-shm-usage')"
+    "from datetime import datetime, timedelta\n",
+    "import time"
    ]
   },
   {
@@ -45,70 +24,129 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Empty DataFrame\n",
-      "Columns: []\n",
-      "Index: []\n",
-      "총 0건의 뉴스가 수집되었습니다.\n"
+      "요청 URL: https://search.daum.net/search?w=news&cluster=n&DA=STC&enc=utf8&spacing=0&q=삼성전자&sort=accuracy&p=0&period=u&sd=20230301000000&ed=20230301235959\n",
+      "2023-03-01 1 페이지 수집 완료\n",
+      "요청 URL: https://search.daum.net/search?w=news&cluster=n&DA=STC&enc=utf8&spacing=0&q=삼성전자&sort=accuracy&p=1&period=u&sd=20230301000000&ed=20230301235959\n",
+      "2023-03-01 2 페이지 수집 완료\n",
+      "요청 URL: https://search.daum.net/search?w=news&cluster=n&DA=STC&enc=utf8&spacing=0&q=삼성전자&sort=accuracy&p=2&period=u&sd=20230301000000&ed=20230301235959\n",
+      "2023-03-01 3 페이지 수집 완료\n",
+      "요청 URL: https://search.daum.net/search?w=news&cluster=n&DA=STC&enc=utf8&spacing=0&q=삼성전자&sort=accuracy&p=3&period=u&sd=20230301000000&ed=20230301235959\n",
+      "2023-03-01 4 페이지 수집 완료\n",
+      "요청 URL: https://search.daum.net/search?w=news&cluster=n&DA=STC&enc=utf8&spacing=0&q=삼성전자&sort=accuracy&p=4&period=u&sd=20230301000000&ed=20230301235959\n",
+      "2023-03-01 5 페이지 수집 완료\n",
+      "2023-03-01 기사 수집 완료\n",
+      "요청 URL: https://search.daum.net/search?w=news&cluster=n&DA=STC&enc=utf8&spacing=0&q=삼성전자&sort=accuracy&p=0&period=u&sd=20230302000000&ed=20230302235959\n",
+      "2023-03-02 1 페이지 수집 완료\n",
+      "요청 URL: https://search.daum.net/search?w=news&cluster=n&DA=STC&enc=utf8&spacing=0&q=삼성전자&sort=accuracy&p=1&period=u&sd=20230302000000&ed=20230302235959\n",
+      "2023-03-02 2 페이지 수집 완료\n",
+      "요청 URL: https://search.daum.net/search?w=news&cluster=n&DA=STC&enc=utf8&spacing=0&q=삼성전자&sort=accuracy&p=2&period=u&sd=20230302000000&ed=20230302235959\n",
+      "2023-03-02 3 페이지 수집 완료\n",
+      "요청 URL: https://search.daum.net/search?w=news&cluster=n&DA=STC&enc=utf8&spacing=0&q=삼성전자&sort=accuracy&p=3&period=u&sd=20230302000000&ed=20230302235959\n",
+      "2023-03-02 4 페이지 수집 완료\n",
+      "요청 URL: https://search.daum.net/search?w=news&cluster=n&DA=STC&enc=utf8&spacing=0&q=삼성전자&sort=accuracy&p=4&period=u&sd=20230302000000&ed=20230302235959\n",
+      "2023-03-02 5 페이지 수집 완료\n",
+      "2023-03-02 기사 수집 완료\n",
+      "요청 URL: https://search.daum.net/search?w=news&cluster=n&DA=STC&enc=utf8&spacing=0&q=삼성전자&sort=accuracy&p=0&period=u&sd=20230303000000&ed=20230303235959\n",
+      "2023-03-03 1 페이지 수집 완료\n",
+      "요청 URL: https://search.daum.net/search?w=news&cluster=n&DA=STC&enc=utf8&spacing=0&q=삼성전자&sort=accuracy&p=1&period=u&sd=20230303000000&ed=20230303235959\n",
+      "2023-03-03 2 페이지 수집 완료\n",
+      "요청 URL: https://search.daum.net/search?w=news&cluster=n&DA=STC&enc=utf8&spacing=0&q=삼성전자&sort=accuracy&p=2&period=u&sd=20230303000000&ed=20230303235959\n",
+      "2023-03-03 3 페이지 수집 완료\n",
+      "요청 URL: https://search.daum.net/search?w=news&cluster=n&DA=STC&enc=utf8&spacing=0&q=삼성전자&sort=accuracy&p=3&period=u&sd=20230303000000&ed=20230303235959\n",
+      "2023-03-03 4 페이지 수집 완료\n",
+      "요청 URL: https://search.daum.net/search?w=news&cluster=n&DA=STC&enc=utf8&spacing=0&q=삼성전자&sort=accuracy&p=4&period=u&sd=20230303000000&ed=20230303235959\n",
+      "2023-03-03 5 페이지 수집 완료\n",
+      "2023-03-03 기사 수집 완료\n",
+      "CSV 저장됨.\n"
      ]
     }
    ],
    "source": [
-    "# 드라이버 실행\n",
-    "driver = webdriver.Chrome(service=Service(ChromeDriverManager().install()), options=options)\n",
-    "\n",
-    "# 날짜 범위 설정\n",
-    "start_date = pd.to_datetime('2023-03-01')\n",
-    "end_date = pd.to_datetime('2024-02-28')\n",
+    "# 검색 키워드 및 날짜 범위\n",
+    "keyword = '삼성전자'\n",
+    "start_date = datetime.strptime('2023-03-01', '%Y-%m-%d')\n",
+    "end_date = datetime.strptime('2023-03-03', '%Y-%m-%d')\n",
     "\n",
     "# 결과 저장 리스트\n",
     "data = []\n",
     "\n",
-    "# User-Agent 설정\n",
+    "# 헤더 설정\n",
     "headers = {\n",
     "    'User-Agent': 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/123.0.0.0 Safari/537.36'\n",
     "}\n",
     "\n",
-    "# 날짜 루프\n",
+    "# 날짜 포맷 지정\n",
     "date = start_date\n",
     "while date <= end_date:\n",
-    "    date_str = date.strftime('%Y%m%d')\n",
-    "    url = f'https://news.naver.com/main/ranking/popularDay.naver?rankingType=popular_day&sectionId=101&date={date_str}'\n",
+    "    start_str = date.strftime('%Y%m%d') + '000000'\n",
+    "    end_str = date.strftime('%Y%m%d') + '235959'\n",
     "\n",
-    "    try:\n",
-    "        res = requests.get(url, headers=headers, timeout=5)\n",
+    "    # 페이지 루프\n",
+    "    for page in range(0, 5):  # 최대 5페이지까지 크롤링\n",
+    "\n",
+    "        url = f\"https://search.daum.net/search?w=news&cluster=n&DA=STC&enc=utf8&spacing=0&q={keyword}&sort=accuracy&p={page}&period=u&sd={start_str}&ed={end_str}\"\n",
+    "        print(f\"요청 URL: {url}\")\n",
+    "        res = requests.get(url, headers=headers)\n",
     "        if res.status_code != 200:\n",
-    "            print(f\"{date_str} 요청 실패: {res.status_code}\")\n",
-    "            date += timedelta(days=1)\n",
+    "            print(f\"{start_date} 페이지 {page} 요청 실패: {res.status_code}\")\n",
     "            continue\n",
     "\n",
     "        soup = BeautifulSoup(res.text, 'html.parser')\n",
-    "        # 최근 구조에서는 ranking_list ol 태그 안에 있음\n",
-    "        news_list = soup.select('ol.ranking_list li')\n",
+    "        articles = soup.select('div.item-bundle-mid div.item-title a')\n",
     "\n",
-    "        for item in news_list:\n",
-    "            try:\n",
-    "                title = item.select_one('div.ranking_headline').get_text(strip=True)\n",
-    "                data.append({\n",
-    "                    '날짜': date_str,\n",
-    "                    '뉴스제목': title\n",
-    "                })\n",
-    "            except AttributeError:\n",
-    "                continue\n",
+    "        for article in articles:\n",
+    "            title = article.text.strip()\n",
     "\n",
-    "    except Exception as e:\n",
-    "        print(f\"{date_str} 크롤링 중 오류: {e}\")\n",
+    "            data.append({\n",
+    "                '날짜': date.strftime('%Y-%m-%d'),\n",
+    "                '뉴스제목': title\n",
+    "            \n",
+    "            })\n",
+    "\n",
+    "            time.sleep(1)\n",
+    "        \n",
+    "        print(f\"{date.strftime('%Y-%m-%d')} {page + 1} 페이지 수집 완료\")\n",
+    "\n",
+    "\n",
     "\n",
     "    date += timedelta(days=1)\n",
     "\n",
-    "# DataFrame으로 변환\n",
+    "\n",
+    "# DataFrame으로 변환 및 저장\n",
     "df = pd.DataFrame(data)\n",
-    "\n",
-    "# 결과 확인\n",
-    "print(df.head())\n",
-    "print(f\"총 {len(df)}건의 뉴스가 수집되었습니다.\")\n",
-    "\n",
-    "# CSV 저장\n",
-    "df.to_csv('naver_news_20230301_20240228.csv', index=False, encoding='utf-8-sig')\n"
+    "df.to_csv('daum_news_samsung_20230301_20240229.csv', index=False, encoding='utf-8-sig')\n",
+    "print(\"CSV 저장됨.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "5596a4ed",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             날짜                                      뉴스제목\n",
+      "0    2023-03-01           ‘반도체의 봄’ 언제 오나, 삼성전자 1·2월 적자 3조\n",
+      "1    2023-03-01         ‘갤럭시’→‘삼성’ 일본서 8년 만에 제 이름 찾는 삼성전자\n",
+      "2    2023-03-01  삼성전자, 중저가 OLED TV 3종 상반기 추가 출시…점유율 확보 속도\n",
+      "3    2023-03-01              삼성전자·수도권대기환경청, 미세먼지 저감 협약 체결\n",
+      "4    2023-03-01             지난달 국내증시 거래대금 1위는 삼성전자…SM은 4위\n",
+      "..          ...                                       ...\n",
+      "145  2023-03-03    삼성전자, 지난해 4분기 D램 매출 25%↓… 점유율은 45%로 확대\n",
+      "146  2023-03-03          \"삼성전자 저점매수 전략 유효···하반기 회복 강도 중요\"\n",
+      "147  2023-03-03      “8만전자 간다더니”...삼전, 외국인 주춤하자 6만전자 ‘흔들’\n",
+      "148  2023-03-03                MWC2023에 공개된 삼성전자 폴더블 스마트폰\n",
+      "149  2023-03-03         \"지난해 4분기 삼성전자 D램 매출 25%↓…점유율은 상승\"\n",
+      "\n",
+      "[150 rows x 2 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df)"
    ]
   }
  ],
