--- a/stockprice_data_crawling.ipynb
+++ b/stockprice_data_crawling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,252 +74,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "             날짜          종가              거래량   변동률(%)\n",
-      "0    2023.03.02      60,800       13,095,682     0.0%\n",
-      "1    2023.03.03      60,500       10,711,405   -0.49%\n",
-      "2    2023.03.06      61,500       13,630,602    1.65%\n",
-      "3    2023.03.07      60,700       11,473,280    -1.3%\n",
-      "4    2023.03.08      60,300       14,161,857   -0.66%\n",
-      "5    2023.03.09      60,100       14,334,499   -0.33%\n",
-      "6    2023.03.10      59,500       11,902,471    -1.0%\n",
-      "7    2023.03.13      60,000       12,779,724    0.84%\n",
-      "8    2023.03.14      59,000       12,147,346   -1.67%\n",
-      "9    2023.03.15      59,800       10,482,149    1.36%\n",
-      "10   2023.03.16      59,900       10,611,939    0.17%\n",
-      "11   2023.03.17      61,300       14,090,110    2.34%\n",
-      "12   2023.03.20      60,200        9,618,009   -1.79%\n",
-      "13   2023.03.21      60,300        8,318,514    0.17%\n",
-      "14   2023.03.22      61,100        8,978,591    1.33%\n",
-      "15   2023.03.23      62,300       15,381,057    1.96%\n",
-      "16   2023.03.24      63,000       18,278,602    1.12%\n",
-      "17   2023.03.27      62,100       11,039,331   -1.43%\n",
-      "18   2023.03.28      62,900       11,614,118    1.29%\n",
-      "19   2023.03.29      62,700       11,216,008   -0.32%\n",
-      "20   2023.03.30      63,200       15,684,377     0.8%\n",
-      "21   2023.03.31      64,000       14,094,479    1.27%\n",
-      "22   2023.04.03      63,100       11,973,133   -1.41%\n",
-      "23   2023.04.04      63,600       11,120,514    0.79%\n",
-      "24   2023.04.05      63,900        9,176,149    0.47%\n",
-      "25   2023.04.06      62,300       14,992,747    -2.5%\n",
-      "26   2023.04.07      65,000       27,476,120    4.33%\n",
-      "27   2023.04.10      65,700       18,777,166    1.08%\n",
-      "28   2023.04.11      65,900       16,323,183     0.3%\n",
-      "29   2023.04.12      66,000       15,021,313    0.15%\n",
-      "30   2023.04.13      66,100       15,091,022    0.15%\n",
-      "31   2023.04.14      65,100       16,176,490   -1.51%\n",
-      "32   2023.04.17      65,300       13,486,618    0.31%\n",
-      "33   2023.04.18      65,600       14,802,060    0.46%\n",
-      "34   2023.04.19      65,500       10,255,985   -0.15%\n",
-      "35   2023.04.20      65,300        9,501,169   -0.31%\n",
-      "36   2023.04.21      65,700       10,538,622    0.61%\n",
-      "37   2023.04.24      65,200       12,986,581   -0.76%\n",
-      "38   2023.04.25      63,600       16,193,271   -2.45%\n",
-      "39   2023.04.26      64,100       12,664,541    0.79%\n",
-      "40   2023.04.27      64,600       14,779,601    0.78%\n",
-      "41   2023.04.28      65,500       19,699,481    1.39%\n",
-      "42   2023.05.02      65,700       14,396,948    0.31%\n",
-      "43   2023.05.03      65,400        8,876,749   -0.46%\n",
-      "44   2023.05.04      65,100        9,791,064   -0.46%\n",
-      "45   2023.05.08      65,900        9,405,365    1.23%\n",
-      "46   2023.05.09      65,300        9,366,861   -0.91%\n",
-      "47   2023.05.10      64,600       13,057,727   -1.07%\n",
-      "48   2023.05.11      64,200       11,648,905   -0.62%\n",
-      "49   2023.05.12      64,100        8,693,913   -0.16%\n",
-      "50   2023.05.15      64,500        8,172,021    0.62%\n",
-      "51   2023.05.16      65,400       12,334,657     1.4%\n",
-      "52   2023.05.17      65,000       10,745,504   -0.61%\n",
-      "53   2023.05.18      66,200       14,431,704    1.85%\n",
-      "54   2023.05.19      68,400       20,349,345    3.32%\n",
-      "55   2023.05.22      68,500       14,470,308    0.15%\n",
-      "56   2023.05.23      68,400        8,561,643   -0.15%\n",
-      "57   2023.05.24      68,500        8,192,896    0.15%\n",
-      "58   2023.05.25      68,800       14,231,160    0.44%\n",
-      "59   2023.05.26      70,300       19,549,511    2.18%\n",
-      "60   2023.05.30      72,300       27,476,897    2.84%\n",
-      "61   2023.05.31      71,400       25,666,087   -1.24%\n",
-      "62   2023.06.01      70,900       14,669,296    -0.7%\n",
-      "63   2023.06.02      72,200       12,161,798    1.83%\n",
-      "64   2023.06.05      71,700       12,686,829   -0.69%\n",
-      "65   2023.06.07      71,000       14,796,613   -0.98%\n",
-      "66   2023.06.08      70,900       19,165,568   -0.14%\n",
-      "67   2023.06.09      72,000       15,050,209    1.55%\n",
-      "68   2023.06.12      71,000       12,064,287   -1.39%\n",
-      "69   2023.06.13      72,000       13,227,285    1.41%\n",
-      "70   2023.06.14      71,900       12,541,046   -0.14%\n",
-      "71   2023.06.15      71,500       13,614,994   -0.56%\n",
-      "72   2023.06.16      71,800       15,373,696    0.42%\n",
-      "73   2023.06.19      71,200       11,100,887   -0.84%\n",
-      "74   2023.06.20      71,400       11,557,883    0.28%\n",
-      "75   2023.06.21      70,500       10,626,603   -1.26%\n",
-      "76   2023.06.22      71,300       11,411,007    1.13%\n",
-      "77   2023.06.23      71,600       12,329,484    0.42%\n",
-      "78   2023.06.26      72,400       10,541,901    1.12%\n",
-      "79   2023.06.27      72,600        9,442,997    0.28%\n",
-      "80   2023.06.28      72,700        8,783,093    0.14%\n",
-      "81   2023.06.29      72,400       12,229,967   -0.41%\n",
-      "82   2023.06.30      72,200       11,694,765   -0.28%\n",
-      "83   2023.07.03      73,000       10,722,181    1.11%\n",
-      "84   2023.07.04      73,000       10,214,350     0.0%\n",
-      "85   2023.07.05      72,000       12,310,610   -1.37%\n",
-      "86   2023.07.06      71,600       14,777,667   -0.56%\n",
-      "87   2023.07.07      69,900       17,308,877   -2.37%\n",
-      "88   2023.07.10      69,500       11,713,926   -0.57%\n",
-      "89   2023.07.11      71,500       12,177,392    2.88%\n",
-      "90   2023.07.12      71,900       10,375,581    0.56%\n",
-      "91   2023.07.13      71,900       14,417,279     0.0%\n",
-      "92   2023.07.14      73,400       15,882,519    2.09%\n",
-      "93   2023.07.17      73,300       10,060,049   -0.14%\n",
-      "94   2023.07.18      72,000       11,697,900   -1.77%\n",
-      "95   2023.07.19      71,700       10,896,412   -0.42%\n",
-      "96   2023.07.20      71,000        9,732,730   -0.98%\n",
-      "97   2023.07.21      70,300       16,528,926   -0.99%\n",
-      "98   2023.07.24      70,400       13,418,597    0.14%\n",
-      "99   2023.07.25      70,000       14,314,945   -0.57%\n",
-      "100  2023.07.26      69,800       30,016,221   -0.29%\n",
-      "101  2023.07.27      71,700       24,261,179    2.72%\n",
-      "102  2023.07.28      70,600       19,420,683   -1.53%\n",
-      "103  2023.07.31      69,800       13,035,420   -1.13%\n",
-      "104  2023.08.01      71,100       12,299,254    1.86%\n",
-      "105  2023.08.02      69,900       13,835,020   -1.69%\n",
-      "106  2023.08.03      68,800       20,087,090   -1.57%\n",
-      "107  2023.08.04      68,300       12,360,193   -0.73%\n",
-      "108  2023.08.07      68,500       10,968,505    0.29%\n",
-      "109  2023.08.08      67,600       14,664,709   -1.31%\n",
-      "110  2023.08.09      68,900       17,259,673    1.92%\n",
-      "111  2023.08.10      68,000       10,227,311   -1.31%\n",
-      "112  2023.08.11      67,500        9,781,038   -0.74%\n",
-      "113  2023.08.14      67,300        9,352,343    -0.3%\n",
-      "114  2023.08.16      67,000       13,174,578   -0.45%\n",
-      "115  2023.08.17      66,700       10,778,652   -0.45%\n",
-      "116  2023.08.18      66,300       11,745,006    -0.6%\n",
-      "117  2023.08.21      66,600        9,720,067    0.45%\n",
-      "118  2023.08.22      66,600       10,500,242     0.0%\n",
-      "119  2023.08.23      67,100        9,549,352    0.75%\n",
-      "120  2023.08.24      68,200       15,044,463    1.64%\n",
-      "121  2023.08.25      67,100        7,032,462   -1.61%\n",
-      "122  2023.08.28      66,800        5,824,628   -0.45%\n",
-      "123  2023.08.29      66,800        9,114,352     0.0%\n",
-      "124  2023.08.30      67,100        9,181,223    0.45%\n",
-      "125  2023.08.31      66,900       15,964,630    -0.3%\n",
-      "126  2023.09.01      71,000       29,738,235    6.13%\n",
-      "127  2023.09.04      71,200       26,286,495    0.28%\n",
-      "128  2023.09.05      70,700       12,330,239    -0.7%\n",
-      "129  2023.09.06      70,000       11,414,620   -0.99%\n",
-      "130  2023.09.07      70,400       13,741,241    0.57%\n",
-      "131  2023.09.08      70,300       10,688,118   -0.14%\n",
-      "132  2023.09.11      70,800       11,785,462    0.71%\n",
-      "133  2023.09.12      70,500       11,688,599   -0.42%\n",
-      "134  2023.09.13      70,900       15,955,797    0.57%\n",
-      "135  2023.09.14      71,700       21,041,407    1.13%\n",
-      "136  2023.09.15      72,000       17,823,512    0.42%\n",
-      "137  2023.09.18      70,200       16,040,727    -2.5%\n",
-      "138  2023.09.19      69,800       11,820,188   -0.57%\n",
-      "139  2023.09.20      69,600       10,873,015   -0.29%\n",
-      "140  2023.09.21      68,900       10,796,336   -1.01%\n",
-      "141  2023.09.22      68,800        9,897,840   -0.15%\n",
-      "142  2023.09.25      69,400       13,582,516    0.87%\n",
-      "143  2023.09.26      68,600       13,143,470   -1.15%\n",
-      "144  2023.09.27      68,400       14,886,491   -0.29%\n",
-      "145  2023.10.04      67,500       23,361,149   -1.32%\n",
-      "146  2023.10.05      66,700       16,108,313   -1.19%\n",
-      "147  2023.10.06      66,000       14,386,527   -1.05%\n",
-      "148  2023.10.10      66,400       19,889,202    0.61%\n",
-      "149  2023.10.11      68,200       25,209,349    2.71%\n",
-      "150  2023.10.12      68,900       19,311,380    1.03%\n",
-      "151  2023.10.13      68,000        9,724,086   -1.31%\n",
-      "152  2023.10.16      67,300       12,599,299   -1.03%\n",
-      "153  2023.10.17      69,400       17,299,253    3.12%\n",
-      "154  2023.10.18      70,500       16,493,184    1.59%\n",
-      "155  2023.10.19      69,500       13,985,012   -1.42%\n",
-      "156  2023.10.20      68,800       15,204,495   -1.01%\n",
-      "157  2023.10.23      68,400       11,625,959   -0.58%\n",
-      "158  2023.10.24      68,500       12,791,710    0.15%\n",
-      "159  2023.10.25      68,000       10,610,703   -0.73%\n",
-      "160  2023.10.26      66,700       15,517,624   -1.91%\n",
-      "161  2023.10.27      67,300       11,334,726     0.9%\n",
-      "162  2023.10.30      67,300       10,139,270     0.0%\n",
-      "163  2023.10.31      66,900       14,488,892   -0.59%\n",
-      "164  2023.11.01      68,600       13,775,256    2.54%\n",
-      "165  2023.11.02      69,700       16,350,031     1.6%\n",
-      "166  2023.11.03      69,600       10,322,234   -0.14%\n",
-      "167  2023.11.06      70,900       22,228,489    1.87%\n",
-      "168  2023.11.07      70,900       17,228,731     0.0%\n",
-      "169  2023.11.08      69,900       12,901,310   -1.41%\n",
-      "170  2023.11.09      70,300       12,301,373    0.57%\n",
-      "171  2023.11.10      70,500        9,684,347    0.28%\n",
-      "172  2023.11.13      70,400        9,246,919   -0.14%\n",
-      "173  2023.11.14      70,800        9,567,984    0.57%\n",
-      "174  2023.11.15      72,200       20,148,677    1.98%\n",
-      "175  2023.11.16      72,800       15,860,451    0.83%\n",
-      "176  2023.11.17      72,500       11,494,644   -0.41%\n",
-      "177  2023.11.20      72,700       10,610,157    0.28%\n",
-      "178  2023.11.21      72,800        9,712,881    0.14%\n",
-      "179  2023.11.22      72,800       11,105,143     0.0%\n",
-      "180  2023.11.23      72,400        6,775,614   -0.55%\n",
-      "181  2023.11.24      71,700        6,676,685   -0.97%\n",
-      "182  2023.11.27      71,300        9,113,857   -0.56%\n",
-      "183  2023.11.28      72,700       13,283,081    1.96%\n",
-      "184  2023.11.29      72,700        9,283,933     0.0%\n",
-      "185  2023.11.30      72,800       15,783,714    0.14%\n",
-      "186  2023.12.01      72,000        9,871,284    -1.1%\n",
-      "187  2023.12.04      72,600       10,229,267    0.83%\n",
-      "188  2023.12.05      71,200       12,129,682   -1.93%\n",
-      "189  2023.12.06      71,700        8,123,087     0.7%\n",
-      "190  2023.12.07      71,500        8,862,017   -0.28%\n",
-      "191  2023.12.08      72,600       10,859,463    1.54%\n",
-      "192  2023.12.11      73,000        9,861,960    0.55%\n",
-      "193  2023.12.12      73,500       13,758,646    0.68%\n",
-      "194  2023.12.13      72,800       13,116,766   -0.95%\n",
-      "195  2023.12.14      73,100       27,567,593    0.41%\n",
-      "196  2023.12.15      73,300       15,419,815    0.27%\n",
-      "197  2023.12.18      72,900        9,690,551   -0.55%\n",
-      "198  2023.12.19      73,400        8,907,632    0.69%\n",
-      "199  2023.12.20      74,800       16,870,156    1.91%\n",
-      "200  2023.12.21      75,000       13,478,766    0.27%\n",
-      "201  2023.12.22      75,900       14,515,608     1.2%\n",
-      "202  2023.12.26      76,600       13,164,909    0.92%\n",
-      "203  2023.12.27      78,000       20,651,042    1.83%\n",
-      "204  2023.12.28      78,500       17,797,536    0.64%\n",
-      "205  2024.01.02      79,600       17,142,847     1.4%\n",
-      "206  2024.01.03      77,000       21,753,644   -3.27%\n",
-      "207  2024.01.04      76,600       15,324,439   -0.52%\n",
-      "208  2024.01.05      76,600       11,304,316     0.0%\n",
-      "209  2024.01.08      76,500       11,088,724   -0.13%\n",
-      "210  2024.01.09      74,700       26,019,249   -2.35%\n",
-      "211  2024.01.10      73,600       20,259,529   -1.47%\n",
-      "212  2024.01.11      73,200       57,691,266   -0.54%\n",
-      "213  2024.01.12      73,100       13,038,939   -0.14%\n",
-      "214  2024.01.15      73,900       13,212,339    1.09%\n",
-      "215  2024.01.16      72,600       14,760,415   -1.76%\n",
-      "216  2024.01.17      71,000       22,683,660    -2.2%\n",
-      "217  2024.01.18      71,700       17,853,397    0.99%\n",
-      "218  2024.01.19      74,700       23,363,427    4.18%\n",
-      "219  2024.01.22      75,100       19,673,375    0.54%\n",
-      "220  2024.01.23      75,200       14,786,224    0.13%\n",
-      "221  2024.01.24      74,000       12,860,661    -1.6%\n",
-      "222  2024.01.25      74,100       11,737,747    0.14%\n",
-      "223  2024.01.26      73,400       11,160,062   -0.94%\n",
-      "224  2024.01.29      74,400       13,976,521    1.36%\n",
-      "225  2024.01.30      74,300       12,244,418   -0.13%\n",
-      "226  2024.01.31      72,700       15,703,560   -2.15%\n",
-      "227  2024.02.01      73,600       19,881,033    1.24%\n",
-      "228  2024.02.02      75,200       14,955,881    2.17%\n",
-      "229  2024.02.05      74,300       19,026,021    -1.2%\n",
-      "230  2024.02.06      74,400       14,559,254    0.13%\n",
-      "231  2024.02.07      75,000       16,566,445    0.81%\n",
-      "232  2024.02.08      74,100       20,810,708    -1.2%\n",
-      "233  2024.02.13      75,200       21,966,745    1.48%\n",
-      "234  2024.02.14      74,000       12,434,945    -1.6%\n",
-      "235  2024.02.15      73,000       14,120,600   -1.35%\n",
-      "236  2024.02.16      72,800       13,444,781   -0.27%\n",
-      "237  2024.02.19      73,800       12,726,404    1.37%\n",
-      "238  2024.02.20      73,300       14,681,477   -0.68%\n",
-      "239  2024.02.21      73,000       11,503,495   -0.41%\n",
-      "240  2024.02.22      73,100       15,208,934    0.14%\n",
-      "241  2024.02.23      72,900       16,225,166   -0.27%\n",
-      "242  2024.02.26      72,800       14,669,352   -0.14%\n",
-      "243  2024.02.27      72,900       13,201,981    0.14%\n",
-      "244  2024.02.28      73,200       11,795,859    0.41%\n"
+      "상승 여부\n",
+      "0    128\n",
+      "1    117\n",
+      "Name: count, dtype: int64\n"
      ]
     }
    ],
@@ -341,6 +99,9 @@
     "# 소수점 둘째자리까지만 반올림\n",
     "df['변동률(%)'] = df['변동률(%)'].round(2)\n",
     "\n",
+    "# 상승/하락 여부 라벨링 (0/1)\n",
+    "df['상승 여부'] = (df['변동률(%)'] > 0).astype(int)\n",
+    "print(df['상승 여부'].value_counts())\n",
     "\n",
     "# 결과 출력 \n",
     "print(df)\n",
