--- a/crawling/preprocessing/stockprice_data_crawling.ipynb
+++ b/crawling/preprocessing/stockprice_data_crawling.ipynb
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,13 @@
       "상승 여부\n",
       "0    128\n",
       "1    117\n",
-      "Name: count, dtype: int64\n"
+      "Name: count, dtype: int64\n",
+      "           날짜     종가       거래량  변동률(%)  상승 여부\n",
+      "0  2023.03.02  60800  13095682    0.00      0\n",
+      "1  2023.03.03  60500  10711405   -0.49      0\n",
+      "2  2023.03.06  61500  13630602    1.65      1\n",
+      "3  2023.03.07  60700  11473280   -1.30      0\n",
+      "4  2023.03.08  60300  14161857   -0.66      0\n"
      ]
     }
    ],
@@ -104,7 +110,7 @@
     "print(df['상승 여부'].value_counts())\n",
     "\n",
     "# 결과 출력 \n",
-    "print(df)\n",
+    "print(df.head())\n",
     "\n",
     "# CSV 저장\n",
     "df.to_csv('samsung_stock_20230301_20240228.csv', index=False, encoding='utf-8-sig')"
