--- a/modeling/feature_engineering&modeling.ipynb
+++ b/modeling/feature_engineering&modeling.ipynb
@@ -2,23 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "id": "6d48906a",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.ensemble import RandomForestRegressor, GradientBoostingRegressor\n",
     "from xgboost import XGBRegressor\n",
-    "from sklearn.model_selection import TimeSeriesSplit, cross_val_score, GridSearchCV\n",
-    "from sklearn.metrics import make_scorer, mean_squared_error, r2_score"
+    "from sklearn.metrics import mean_squared_error, r2_score"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "c999c8e3",
    "metadata": {},
    "outputs": [
@@ -30,16 +28,6 @@
       "RandomForest      2.0703\t -0.1220\n",
       "GradientBoosting  2.4507\t -0.3282\n",
       "XGBoost           2.2560\t -0.2226\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\gihwa\\AppData\\Roaming\\Python\\Python312\\site-packages\\xgboost\\training.py:183: UserWarning: [03:43:38] WARNING: C:\\actions-runner\\_work\\xgboost\\xgboost\\src\\learner.cc:738: \n",
-      "Parameters: { \"use_label_encoder\" } are not used.\n",
-      "\n",
-      "  bst.update(dtrain, iteration=i, fobj=obj)\n"
      ]
     }
    ],
@@ -73,7 +61,6 @@
     "    \"GradientBoosting\": GradientBoostingRegressor(random_state=42),\n",
     "    \"XGBoost\": XGBRegressor(\n",
     "        random_state=42,\n",
-    "        use_label_encoder=False,\n",
     "        eval_metric=\"rmse\"\n",
     "    )\n",
     "}\n",
